for example some parameters are shared by family types in multiple categories, e.g. we've had material for louvres in both doors and window family types
*** 18
**** =18:00= looking into "copy/pasting" action between different revit sessions
using InsideClipboard from NirSoft I confirmed that Revit doesn't use system clipboard at all
need to find a way to replicate this behavior cross-process
1. export/import elements associated family types, line styles etc.
2. place them at specific positions
I will start with view-dependent elements first
***** [2024-12-19 Thu 01:35] was able to automate export and import of families of selected elements between sessions, but basic placement wasn't right, elements kept showing up in wrong positions and wrong orientations
***** =15:27= losing hope this will work due to complex nature of revit elements
[[revit forum thread][https://forums.autodesk.com/t5/revit-api-forum/recreate-elements-between-revit-projects/td-p/13220620]]
***** =20:58= lost access to gpt o1 and don't know how to continue on my own, leaving it for later
[[chatgpt][https://chatgpt.com/c/67642cda-3ef0-800c-b89e-aa1d7283bc31]]
***** =22:51= realized that there are builtin commands in revit already to save as "library" group or view and corresponding command to load/insert them
they may have some limitations that I haven't discovered yet, like placing them in the same location as in the original file
in these situations my Copy/PasteCrossSession commands may still prove useful
while they are not perfect, they correctly place most of detail items in same locations
they are fairly convenient, invoking any one of them automatically select currently selected group or currently active window
it may still worth though to write separarate commands to perform bulk exports to avoid having to open entire project in the future when certain detail items are needed
*** 19
**** =13:58= minor fix to "SelectAllElementsInView" command to prevent it from selecting views