@@ -94,6 +94,7 @@
     <Compile Include="revit-scripts\DeselectRandomly.cs" />
     <Compile Include="revit-scripts\DrawCircleAtOrigin.cs" />
     <Compile Include="revit-scripts\DrawCropRegion.cs" />
+    <Compile Include="revit-scripts\ExportSelectedViews.cs" />
     <Compile Include="revit-scripts\PasteCrossSession.cs" />
     <Compile Include="revit-scripts\PlaceMaterialKeynote.cs" />
     <Compile Include="revit-scripts\SelectFamilyTypesInCurrentView.cs" />
